# offline-vendoring

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  example_settings.yaml
.github/scripts/: block_online_resources.sh  validate_offline_install.sh
.github/workflows/: rust.yml
pip/: pre-commit.requirements.txt
src/: cmd.rs  custom.rs  error.rs  errors.rs  git.rs  lib.rs  main.rs  python.rs  rust.rs  test.rs
src/custom/: errors.rs  test.rs
src/git/: errors.rs  test.rs
src/python/: errors.rs  test.rs
src/rust/: errors.rs  test.rs
tests/: integration_tests.rs  pre-commit.rs
tests/common/: mod.rs
