[package]
name = "offline_vendoring"
version = "0.1.0"
edition = "2024"
authors = [ "Mathieu Jadin <mathjadin@gmail.com>" ]
license = "MIT"
# description = ""
# repository = ""
# keywords = []
# categories = []

[dependencies]
clap = { version = "4", features = ["derive"] }
config = "0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0"
tracing-subscriber = "0"

[dev-dependencies]
rstest = "0"
test-log ={ version = "0", default-features = false, features = ["trace"] }

[lib]
name = "offline_vendoring"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "offline_vendoring-cli"
[lints.rust]
arithmetic_overflow = "deny"            # Prevent operations that would cause integer overflow.
unnecessary_transmutes = "deny"         # Prevent unsafe & unnecessary transmutation.
ambiguous_negative_literals = "deny"    # Check for cases that are confusing between a negative literal and a negation that's not part of the literal.
let_underscore_drop = "deny"            # Check for statements which don't bind an expression which has a non-trivial Drop implementation to anything
#                                         causing the expression to be dropped immediately instead of at end of scope.

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# restrictive lints are kept in allow level by default

# Allow the following cargo lints
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"   # Unless this is a MCU project, reducing binary size has little interest
# Allow the following pedantic lints
# Warn on the following restriction lints (checked for 1.93.0)
# https://rust-lang.github.io/rust-clippy/rust-1.93.0/index.html?groups=restriction
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn" # Might be legit if the Map<> type is required for the next calls
mem_forget = "warn"
min_ident_chars = "warn"
missing_assert_message = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# For MCU development, consider the following lint
# float_arithmetic = "warn"
